--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Name]. All rights reserved.</p>
+        <p>&copy; 2024 Rakesh Kasse. All rights reserved.</p>
     </footer>
 </body>
 </html> 
